--- a/.github/workflows/aftership.yml
+++ b/.github/workflows/aftership.yml
@@ -40,16 +40,16 @@ jobs:
 
       - name: Prepare site data
         run: |
-          mkdir -p site/data
-          cp -f output/returns_intransit.json site/data/returns_intransit.json
-          cp -f output/returns_intransit.xlsx site/data/returns_intransit.xlsx
+          mkdir -p docs/data
+          cp -f output/returns_intransit.json docs/data/returns_intransit.json
+          cp -f output/returns_intransit.xlsx docs/data/returns_intransit.xlsx
 
           python - <<'PY'
           import json
           from datetime import datetime, timezone
 
           # read the JSON we just produced
-          with open("site/data/returns_intransit.json","r",encoding="utf-8") as f:
+          with open("docs/data/returns_intransit.json","r",encoding="utf-8") as f:
             data = json.load(f)
 
           meta = {
@@ -57,7 +57,7 @@ jobs:
             "count": data.get("count") if isinstance(data.get("count"), int) else len(data.get("items") or []),
           }
 
-          with open("site/data/meta.json","w",encoding="utf-8") as f:
+          with open("docs/data/meta.json","w",encoding="utf-8") as f:
             json.dump(meta, f, indent=2)
           PY
 
