--- a/.github/workflows/aftership.yml
+++ b/.github/workflows/aftership.yml
@@ -2,7 +2,7 @@ name: AfterShip InTransit Export + UI
 
 on:
   schedule:
-    - cron: "*/15 * * * *"
+    - cron: "0 */4 * * *"
   workflow_dispatch:
 
 permissions:
