--- a/.github/workflows/aftership.yml
+++ b/.github/workflows/aftership.yml
@@ -2,7 +2,7 @@ name: AfterShip InTransit Export + UI
 
 on:
   schedule:
-    - cron: "0 */4 * * *"
+    - cron: "0 */4 * * *"   # every 4 hours (UTC)
   workflow_dispatch:
 
 permissions:
@@ -15,17 +15,18 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install Python dependencies
+      - name: Install dependencies
         run: |
           pip install requests openpyxl
 
-      # Restore dedupe state (best-effort)
       - name: Restore handled state (30-day dedupe)
         uses: actions/cache@v4
         with:
@@ -40,7 +41,7 @@ jobs:
         run: |
           python scripts/aftership_intransit_export.py
 
-      - name: Prepare docs data for GitHub Pages
+      - name: Prepare docs/data for GitHub Pages
         run: |
           mkdir -p docs/data
 
@@ -64,7 +65,22 @@ jobs:
               json.dump(meta, f, indent=2)
           PY
 
-      # Save updated dedupe state
+      - name: Commit & push updated docs/data
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          git add docs/data/*
+
+          # Commit only if something changed
+          if git diff --cached --quiet; then
+            echo "No changes in docs/data to commit."
+            exit 0
+          fi
+
+          git commit -m "Update return shipments data (auto)"
+          git push
+
       - name: Save handled state (30-day dedupe)
         uses: actions/cache@v4
         with:
